INCLUDE_DIRECTORIES(
  ${LBCpp_SOURCE_DIR}/include
  ${CMAKE_CURRENT_BINARY_DIR}
)

SET(SEMANTIC_ROLE_LABELING_LHEADERS
  SemanticRoleLabeling.lh
)

ADD_CRALGORITHM_SOURCES(${SEMANTIC_ROLE_LABELING_LHEADERS})

SET(SEMANTIC_ROLE_LABELING_SOURCES
  ${CRALGORITHMS_OUTPUT_FILES}
  Main.cpp
)

SOURCE_GROUP(GeneratedCode FILES ${CRALGORITHMS_OUTPUT_FILES})

ADD_EXECUTABLE(SemanticRoleLabeling ${SEMANTIC_ROLE_LABELING_SOURCES})

TARGET_LINK_LIBRARIES(SemanticRoleLabeling lbcpp-core)
